--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.0"
+    "mongoose": "^7.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
